add python concepts

--- a/backend/attendance_system/attendance_app/templates/myfirst.html
+++ b/backend/attendance_system/attendance_app/templates/myfirst.html
@@ -6,9 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    this is the intro HTML filre
-    <h1> 
-        Hey this is pranav sirsufale
-    </h1>
+    something something heree is the something going on
 </body>
 </html>
