add django project

--- a/backend/attendance_system/attendance_app/templates/all_students.html
+++ b/backend/attendance_system/attendance_app/templates/all_students.html
@@ -1,22 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Student </title>
-</head>
-<body>
-    
+{% extends 'master.html' %}
+
+{% block title %}
+    all enrolled students 
+{% endblock %}
+
+
+{% block content %}
     <h1> 
         Members 
     </h1>
     <ul>
         {% for x in students %}
         <li>
+            <a href="details/{{x.id}}">
+                
             {{x.firstname}} 
             {{x.lastname}}
+
+            </a>
         </li>
         {% endfor %}
     </ul>
-</body>
-</html>
+{% endblock %}
