beautify the UI especially the login page, make it visually apealing marked done by- pranav sirsufale

--- a/attendance_system/attendance/frontend/src/index.css
+++ b/attendance_system/attendance/frontend/src/index.css
@@ -18,3 +18,11 @@ body {
 .backface-hidden {
   backface-visibility: hidden;
 }
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus {
+  box-shadow: 0 0 0px 1000px transparent inset !important;
+  -webkit-text-fill-color: inherit !important;
+  transition: background-color 9999s ease-in-out 0s;
+}
